// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput closes suggestion drop 1`] = `
<div
  class="StyledDrop-czaYBK bbHJGN"
  tabindex="-1"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
  >
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput closes suggestion drop 2`] = `
"@media only screen and (min-width:700px) {
  .ggTDKd {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.bbHJGN {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput closes suggestion drop 3`] = `
<div
  class="StyledGrommet-gKbdxL fqqdJc"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL gBrQQI"
  >
    <input
      class="StyledTextInput-bqUxsy bQkoNv"
      id="item"
      autocomplete="off"
      name="item"
    />
  </div>
</div>
`;

exports[`TextInput handles next and previous without suggestion 1`] = `
<div
  class="StyledGrommet-gKbdxL fqqdJc"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL gBrQQI"
  >
    <input
      class="StyledTextInput-bqUxsy bQkoNv"
      id="item"
      autocomplete="off"
      name="item"
    />
  </div>
</div>
`;

exports[`TextInput mounts 1`] = `
<div
  class="StyledTextInput__StyledTextInputContainer-gOoAsL gBrQQI"
>
  <input
    class="StyledTextInput-bqUxsy bQkoNv"
    autocomplete="off"
    name="item"
  />
</div>
`;

exports[`TextInput mounts with complex suggestions 1`] = `
<div
  class="StyledDrop-czaYBK bbHJGN"
  tabindex="-1"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
  >
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput mounts with complex suggestions 2`] = `
"@media only screen and (min-width:700px) {
  .ggTDKd {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.bbHJGN {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput mounts with suggestions 1`] = `
<div
  class="StyledDrop-czaYBK bbHJGN"
  tabindex="-1"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
  >
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput mounts with suggestions 2`] = `
"@media only screen and (min-width:700px) {
  .ggTDKd {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.bbHJGN {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput selects suggestion 1`] = `
<div
  class="StyledDrop-czaYBK bbHJGN"
  tabindex="-1"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <ol
    class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
  >
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test
        </div>
      </button>
    </li>
    <li>
      <button
        class="StyledButton-qbvYY ggTDKd"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-YaZNy eBrdsI"
          direction="column"
        >
          test1
        </div>
      </button>
    </li>
  </ol>
</div>
`;

exports[`TextInput selects suggestion 2`] = `
"@media only screen and (min-width:700px) {
  .ggTDKd {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.bbHJGN {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`TextInput selects suggestion 3`] = `
<div
  class="StyledGrommet-gKbdxL fqqdJc"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
  >
    <input
      class="StyledTextInput-bqUxsy lndVan"
      id="item"
      autocomplete="off"
      name="item"
    />
  </div>
</div>
`;
